<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="Set your task title"
        android:hint="@string/task_title"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/etTaskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Task Title" />

    <EditText
        android:id="@+id/etTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="Describe your task"
        android:hint="@string/task_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTaskTitle"
        tools:text="Task Description" />


    <CheckBox
        android:id="@+id/cbTaskCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_completed"
        app:layout_constraintBottom_toTopOf="@+id/tvReminderFrequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaskDescription"
        tools:checked="true" />

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTaskDescription" />

    <Button
        android:id="@+id/btnDeleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_task"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSaveTask" />

    <TextView
        android:id="@+id/tvReminderFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_frequency"
        app:layout_constraintBottom_toTopOf="@+id/spReminderFrequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTaskCompleted"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spReminderFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/reminder_frequency_spinner"
        app:layout_constraintBottom_toTopOf="@+id/tvStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReminderFrequency" />

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_date"
        app:layout_constraintBottom_toTopOf="@+id/dpStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spReminderFrequency" />

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/end_date"
        app:layout_constraintBottom_toTopOf="@+id/dpEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spReminderFrequency" />

    <DatePicker
        android:id="@+id/dpStartDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dpEndDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStartDate" />

    <DatePicker
        android:id="@+id/dpEndDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dpStartDate"
        app:layout_constraintTop_toBottomOf="@+id/tvEndDate" />


</androidx.constraintlayout.widget.ConstraintLayout>
