<resources>
    <string name="app_name">Tasks App</string>
    <string name="action_settings">Settings</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_description">Task description</string>
    <string name="task_completed">Task completed</string>
    <string name="save_task">Save Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_details">Task Details</string>
    <string name="add_task">Add Task</string>
    <string name="yes">Yes</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="no">No</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="task_reminder_channel_description">Task Reminder Channel Description</string>
    <string name="task_reminder_channel_name">Task Reminder Channel Name</string>
    <string name="reminder_frequency">Reminder Frequency</string>
    <string name="reminder_frequency_spinner">Select reminder frequency</string>
</resources>